@@ -1,29 +1,28 @@
 package com.denisowden.banktransfer.service;
 
-import com.denisowden.banktransfer.entity.UserEntity;
-import com.denisowden.banktransfer.model.User;
+import com.denisowden.banktransfer.entity.User;
+import com.denisowden.banktransfer.mapper.UserMapper;
+import com.denisowden.banktransfer.model.UserDto;
 import com.denisowden.banktransfer.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserService {
 
+    private final UserMapper userMapper;
     private final UserRepository userRepository;
-    public UserEntity createUser(UserEntity user) {
+    public User createUser(User user) {
         return userRepository.save(user);
     }
 
-    public List<User> getUser() {
-        return userRepository.
-                findAll().
-                stream().
-                map(User::toModel).
-                collect(Collectors.toList());
+    public List<UserDto> getUser() {
+        return userRepository.findAll().stream()
+            .map(userMapper::toDto)
+            .toList();
     }
 
     public Integer deleteUser(Integer id) {
